--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "jest": {
     "preset": "jest-preset-angular",
     "setupFilesAfterEnv": [
-      "<rootDir>/config.jest.ts"
+      "<rootDir>/setup-jest.ts"
     ],
     "moduleNameMapper": {
       "@app/(.)": "<rootDir>/src/app/$1",
